--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="wait4u.littlewing.archangel"
+          xmlns:tools="http://schemas.android.com/tools"
+          package="wait4u.littlewing.archangel"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="23" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.SET_DEBUG_APP"></uses-permission>
+    <uses-permission android:name="android.permission.SET_DEBUG_APP"
+                     tools:ignore="ProtectedPermissions"></uses-permission>
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
     
