--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         androidGradleToolsVersion = json.androidGradleToolVersion
         gwtVersion = json.gwtVersion
         gwtGradleVersion = json.gwtPluginVersion
+		roboVMVersion = json.robovmVersion
     }
 
     repositories {
@@ -28,8 +29,7 @@ buildscript {
     dependencies {
         classpath "de.richsource.gradle.plugins:gwt-gradle-plugin:0.6"
         classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath 'org.codehaus.groovy:gradle-groovy-android-plugin:0.3.5'
-        classpath "com.excelsiorjet:excelsior-jet-gradle-plugin:0.7.0"
+		classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.8'
     }
 }
 
@@ -57,15 +57,17 @@ project(":core") {
     }
 }
 
-project(":android") {
-    apply plugin: "android"
+project(":ios") {
+	apply plugin: "java-library"
+	apply plugin: "robovm"
 
-    configurations { natives }
-
-    dependencies {
-        compile project(":core")
-        compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
-        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
-        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
-    }
+	dependencies {
+		implementation project(":core")
+		api "com.mobidevelop.robovm:robovm-rt:$roboVMVersion"
+		api "com.mobidevelop.robovm:robovm-cocoatouch:$roboVMVersion"
+		api "com.badlogicgames.gdx:gdx-backend-robovm:$gdxVersion"
+		api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
+		api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-ios"
+	}
 }
+
