--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,3 @@
-org.gradle.configureondemand=false
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_231.jdk/Contents/Home/
+org.gradle.jvmargs=-Xms128m -Dkotlin.daemon.jvm.options\="-Xmx1536M" -Xmx1536M
+org.gradle.daemon=true
+org.gradle.configureondemand=true
